# switchback

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
clients/: node_bridge.md  python_client.py
config/: botwall_skip_urls.txt  extraction.example.json
switchback/: __init__.py  __main__.py  api.py  concurrency.py  content_cache.py  doctor.py  egress.py  extract.py  flags.py  normalize.py  orchestrator.py  reporting.py  search.py  server.py  session_cache.py  session_trace.py  tracing.py
switchback/policy/: botwall.py  gates.py
switchback/tiers/: __init__.py  _browser.py  tier0_apis.py  tier1_http.py  tier2_cloudscraper.py  tier3_browser.py  tier3b_camoufox.py  tier4_firecrawl.py  tier_1.py  tier_2.py  tier_3.py  tier_4.py  tier_5.py  tier_6.py  tier_7.py  tier_residential.py
tests/: _fake_hook.py  conftest.py  nyt_login.py  test_deadline_budget.py  test_normalize.py  test_quality_gate.py  test_retries.py  test_session_nyt.py  test_suite.py  test_tier_migration.py  test_unavailable.py
